--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <!-- meta tags and title -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TP3: Seven Layer Bars</title>
+  <title>TP3: Peach Crisp</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
   <!-- external and on-page CSS goes here -->
   <link rel="stylesheet" href="styles.css" media="all">
@@ -24,24 +30,18 @@
 
 <body>
 
-  <h1>Seven Layer Bars</h1>
+  <h1>Peach Crisp</h1>
 
   <div id="ingredients">
     <h4>Ingredients</h4>
     <ul>
-      <li>½ cup unsalted butter</li>
-      <li>1½ cups graham cracker crumbs</li>
-      <li>1 cup semisweet chocolate chips</li>
-      <li>1 cup butterscotch chips</li>
-      <li>chopped nuts of the following:
-        <ul>
-          <li>1 cup of walnuts, or</li>
-          <li>1 cup of pecans, or</li>
-          <li>1 cup of peanuts</li>
-        </ul>
-      </li>
-      <li>1 can sweetened condensed milk <span>(14 ounce)</span></li>
-      <li>1⅓ cups shredded coconut</li>
+      <li>4 cups sliced peaches</li>
+      <li>1/2 cup all-purpose flour</li>
+      <li>1/2 cup brown sugar</li>
+      <li>1/2 cup cold butter</li>
+      <li>1 teaspoon ground cinnamon</li>
+      <li>1/4 teaspoon salt</li>
+      <li>1 cup rolled oats</li>
     </ul>
   </div>
 
@@ -49,9 +49,11 @@
     <h4>Kitchen Equipment</h4>
     <ul>
       <li>Oven</li>
-      <li>13" x 9" pan</li>
+      <li>8" x 8" baking dish</li>
       <li>Measuring cups</li>
-      <li>Can opener, probably</li>
+      <li>Measuring spoons</li>
+      <li>Bowl</li>
+      <li>Mixing Spoon</li>
       <li>Knife</li>
     </ul>
   </div>
@@ -59,14 +61,11 @@
   <div id="directions">
     <h4>Directions</h4>
     <ol>
-      <li>Preheat oven to 350 degrees F (180 degrees C).</li>
-      <li>Place butter in 13" x 9" inch pan and melt in oven. Swirl to coat bottom and sides with butter.</li>
-      <li>Spread graham cracker crumbs evenly over bottom of pan.</li>
-      <li>Layer chocolate chips, butterscotch chips, and nuts over crumbs.</li>
-      <li>Pour condensed milk over nuts.</li>
-      <li>Sprinkle coconut over condensed milk.</li>
-      <li>Bake until edges are golden brown, about 25 minutes.</li>
-      <li>Let cool before cutting into bars.</li>
+      <li> <span style="background:yellow">Heat oven to 350 degrees F </span> (175 degrees C.)</li>
+      <li>Arrange sliced peaches evenely in an <span style="background:yellow">8" x 8" baking dish.</span></li>
+      <li>Mix flour, brown sugar, butter, cinnamon, and salt in a bowl until crumbly. Fold oats into flour mixture; sprinkle miture evenly over peaches, pressing down lightly.</li>
+      <li>Bake in the preheated oven (about 30 minutes) until crispy and golden brown on top.</li>
+      <li>Let cool and enjoy!</li>
     </ol>
   </div>
 
